syntax = "proto3";

package com.tservice.proto.tset;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service TsetService {
  rpc create(CreateProto) returns (TsetProto);
  rpc update(UpdateProto) returns (TsetProto);
  rpc delete(DeleteProto) returns (google.protobuf.Empty);
  rpc findById(FindByIdProto) returns (TsetProto);
  rpc findAll(FindAllProto) returns (stream TsetProto);
  rpc findByName(FindByNameProto) returns (stream TsetProto);
  rpc findByValue(FindByValueProto) returns (stream TsetProto);
}

message TsetProto {
  string id = 1;
  string name = 2;
  string value = 3;
}

message CreateProto {
  string name = 1;
  string value = 2;
}

message UpdateProto {
  string id = 1;
  string name = 2;
  string value = 3;
}

message DeleteProto {
  string id = 1;
}

message FindByIdProto {
  string id = 1;
}

message FindAllProto {}

message FindByNameProto {
  string name = 1;
}

message FindByValueProto {
  string value = 1;
}

